tests/compile_fail/declare_scheduler_config_file_def_wrong_arity.stderr
error: declare_scheduler!: `config_file_def` must be a 2-tuple of string literals (`(arg_template, guest_path)`), got 3-tuple.
 --> tests/compile_fail/declare_scheduler_config_file_def_wrong_arity.rs:9:23
  |
9 |     config_file_def = ("arg", "guest", "extra"),
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^
